--- a/public/css/meetfornight.css
+++ b/public/css/meetfornight.css
@@ -8134,3 +8134,4 @@ body.compensate-for-scrollbar{overflow:hidden}.fancybox-active{height:auto}.fanc
  /*
  Embed code 1a163d64a3
  */
+label.error { font-size: 12px; color:red; }
