--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,3 +10,8 @@
 @import '~bootstrap/scss/bootstrap';
 
 @import '~pretty-checkbox/src/pretty-checkbox.scss';
+
+@import '~@fullcalendar/core/main.css';
+@import '~@fullcalendar/daygrid/main.css';
+@import '~@fullcalendar/timegrid/main.css';
+@import '~@fullcalendar/list/main.css';
