--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,3 +15,5 @@
 @import '~@fullcalendar/daygrid/main.css';
 @import '~@fullcalendar/timegrid/main.css';
 @import '~@fullcalendar/list/main.css';
+
+@import '~vue-range-component/dist/vue-range-slider.css';
