--- a/resources/css/piwicho.css
+++ b/resources/css/piwicho.css
@@ -16,3 +16,50 @@ label.error { font-size: 12px; color:red; }
     border-radius: 14px;
     background: #eded;
 }
+
+.lista-plan-reservas {
+
+    padding-left: 1em;
+    background: url('../img/icon-list.png') no-repeat 0px 17px;
+    color: #808080;
+    margin-left: 30px;
+    padding-top:15px;
+    padding-bottom:15px;
+    border-bottom: 1px solid #c7c7c7;
+
+}
+
+.btn-rechazar-reserva{
+
+    width: 100%;
+    border-radius: 0.5em;
+    color: #fff;
+    font-weight: bold;
+    background-color: #f20f21;
+    border-color: #f20f21;
+
+}
+
+.btn-aceptar-reserva{
+
+    width: 100%;
+    border-radius: 0.5em;
+    color: #fff;
+    font-weight: bold;
+    background-color: #5b376f;
+    border-color: #5b376f;
+
+}
+
+.btn-cerrar-reserva{
+
+    width: 100%;
+    border-radius: 0.5em;
+    color: #fff;
+    font-weight: bold;
+    background-color: #0069d9;
+    border-color: #0069d9;
+
+}
+
+
