--- a/public/css/meetfornight.css
+++ b/public/css/meetfornight.css
@@ -9990,8 +9990,8 @@ label.error { font-size: 12px; color:red; }
     border-radius: 0.5em;
     color: #fff;
     font-weight: bold;
-    background-color: #f20f21;
-    border-color: #f20f21;
+    background-color: #f20f21 !important; 
+    border-color: #f20f21 !important;
 
 }
 
@@ -10024,7 +10024,7 @@ label.error { font-size: 12px; color:red; }
     background: #fbf9fc;
     cursor:pointer;
 }
-.item-mensaje button {
+.item-mensaje .btn-responder-texto {
     background:none; 
     border:none;
 }
@@ -10041,10 +10041,14 @@ label.error { font-size: 12px; color:red; }
     color:#838383;
 }
 
-.item-mensaje .datos-mensaje .btn-eliminar {
+.item-mensaje .btn-eliminar {
     color:#a969a5;
-    font-size:22px;
     float:right;
+    background:none; 
+    border:none;
+}
+.item-mensaje .btn-eliminar i {
+    font-size:22px;
 }
 
 .item-mensaje .fecha {
@@ -10057,11 +10061,10 @@ label.error { font-size: 12px; color:red; }
 
 .btn-responder-mensaje{
     width: 100%;
-    margin-top: 10px;
     border-radius: 0.5em;
     color: #fff;
     font-weight: bold;
-    background-color: #5b376f !important;
-    border-color: #5b376f !important;
+    background-color: #5b376f;
+    border-color: #5b376f;
 }
-.form-respuesta { margin: 20px 0;}
+.form-respuesta { margin: 0 0 20px 0;}
