--- a/public/css/meetfornight.css
+++ b/public/css/meetfornight.css
@@ -1635,7 +1635,7 @@ footer ul li a:hover{
 
     font-size: 1.1em;
 
-    margin-bottom: 1em;
+   /* margin-bottom: 1em;*/
 
 }
 
@@ -10068,3 +10068,12 @@ label.error { font-size: 12px; color:red; }
     border-color: #5b376f;
 }
 .form-respuesta { margin: 0 0 20px 0;}
+
+.total-actual {
+    width: 100%;
+    text-align: center;
+}
+
+.interior-frecuencia { margin:10px 0 0 20px; }
+
+.espacio-frecuencia { padding:20px 0; }
