--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1039,8 +1039,7 @@ Lots taken from Flatly (MIT): https://bootswatch.com/4/flatly/bootstrap.css
     display: none;
     /* don't display any button-related controls */
   }
-}
-/* DayGridView
+}/* DayGridView
 --------------------------------------------------------------------------------------------------*/
 /* day row structure */
 .fc-dayGridWeek-view .fc-content-skeleton,
@@ -1117,8 +1116,7 @@ Lots taken from Flatly (MIT): https://bootswatch.com/4/flatly/bootstrap.css
   /* work around the way we do column resizing and ensure a minimum width */
   display: inline-block;
   min-width: 1.25em;
-}
-@charset "UTF-8";
+}@charset "UTF-8";
 /* TimeGridView all-day area
 --------------------------------------------------------------------------------------------------*/
 .fc-timeGrid-view .fc-day-grid {
