--- a/public/css/meetfornight.css
+++ b/public/css/meetfornight.css
@@ -7619,26 +7619,26 @@ body.compensate-for-scrollbar{overflow:hidden}.fancybox-active{height:auto}.fanc
 .icon-nuevo-sol:before {
   content: "\e91e";
 }
-.icon-panama .path1:before {
+.icon-pa .path1:before {
   content: "\e91f";
   color: rgb(240, 240, 240);
 }
-.icon-panama .path2:before {
+.icon-pa .path2:before {
   content: "\e920";
   margin-left: -1em;
   color: rgb(0, 82, 180);
 }
-.icon-panama .path3:before {
+.icon-pa .path3:before {
   content: "\e921";
   margin-left: -1em;
   color: rgb(216, 0, 39);
 }
-.icon-panama .path4:before {
+.icon-pa .path4:before {
   content: "\e922";
   margin-left: -1em;
   color: rgb(0, 82, 180);
 }
-.icon-panama .path5:before {
+.icon-pa .path5:before {
   content: "\e923";
   margin-left: -1em;
   color: rgb(216, 0, 39);
@@ -7649,16 +7649,16 @@ body.compensate-for-scrollbar{overflow:hidden}.fancybox-active{height:auto}.fanc
 .icon-people:before {
   content: "\e925";
 }
-.icon-peru .path1:before {
+.icon-pe .path1:before {
   content: "\e926";
   color: rgb(240, 240, 240);
 }
-.icon-peru .path2:before {
+.icon-pe .path2:before {
   content: "\e927";
   margin-left: -1em;
   color: rgb(216, 0, 39);
 }
-.icon-peru .path3:before {
+.icon-pe .path3:before {
   content: "\e928";
   margin-left: -1em;
   color: rgb(216, 0, 39);
@@ -7681,16 +7681,16 @@ body.compensate-for-scrollbar{overflow:hidden}.fancybox-active{height:auto}.fanc
 .icon-share:before {
   content: "\e92e";
 }
-.icon-spain .path1:before {
+.icon-es .path1:before {
   content: "\e92f";
   color: rgb(255, 218, 68);
 }
-.icon-spain .path2:before {
+.icon-es .path2:before {
   content: "\e930";
   margin-left: -1em;
   color: rgb(216, 0, 39);
 }
-.icon-spain .path3:before {
+.icon-es .path3:before {
   content: "\e931";
   margin-left: -1em;
   color: rgb(216, 0, 39);
